fix: canvas on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -236,3 +236,37 @@ canvas {
     transform: translateY(-3px);
   }
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.show {
+  display: initial;
+}
+
+.fade-in {
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-fill-mode: forwards; /* Keeps the element at the state of the last keyframe after animation ends */
+}
+
+.fade-out {
+  animation-name: fadeOut;
+  animation-duration: 1s;
+  animation-fill-mode: forwards; /* Keeps the element at the state of the last keyframe after animation ends */
+}
